finished angular tutorial

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>{{title}}</h1>
-<app-sections></app-sections>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/sections">Sections</a>
+</nav>
+<router-outlet></router-outlet>
+<app-messages></app-messages>
