--- a/src/app/sections/sections.component.css
+++ b/src/app/sections/sections.component.css
@@ -1,4 +1,4 @@
-/* SectionComponent's private CSS styles */
+/* HeroesComponent's private CSS styles */
 
 .sections {
     margin: 0 0 2em 0;
@@ -8,9 +8,8 @@
 }
 
 .sections li {
-    cursor: pointer;
     position: relative;
-    left: 0;
+    cursor: pointer;
     background-color: #EEE;
     margin: .5em;
     padding: .3em 0;
@@ -24,14 +23,16 @@
     left: .1em;
 }
 
-.sections li.selected {
-    background-color: #CFD8DC;
-    color: white;
+.sections a {
+    color: #333;
+    text-decoration: none;
+    position: relative;
+    display: block;
+    width: 250px;
 }
 
-.sections li.selected:hover {
-    background-color: #BBD8DC;
-    color: white;
+.sections a:hover {
+    color: #607D8B;
 }
 
 .sections .badge {
@@ -45,6 +46,30 @@
     left: -1px;
     top: -4px;
     height: 1.8em;
+    min-width: 16px;
+    text-align: right;
     margin-right: .8em;
     border-radius: 4px 0 0 4px;
+}
+
+button {
+    background-color: #eee;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 4px;
+    cursor: pointer;
+    cursor: hand;
+    font-family: Arial;
+}
+
+button:hover {
+    background-color: #cfd8dc;
+}
+
+button.delete {
+    position: relative;
+    left: 194px;
+    top: -32px;
+    background-color: gray !important;
+    color: white;
 }
