added searching functionality

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
-<h3>Top Sections</h3>
+<!-- <h3>Top Sections</h3> -->
 <div class="grid grid-pad">
-  <a *ngFor="let section of sections" class="col-1-4" routerLink="/detail/{{section.id}}">
+  <a *ngFor="let section of sections" class="col-1-4" routerLink="/detail/{{section.sid}}">
     <div class="module section">
       <h4>{{section.name}}</h4>
     </div>
