--- a/src/app/sections/sections.component.html
+++ b/src/app/sections/sections.component.html
@@ -3,17 +3,76 @@
     <label>Section name:
         <input #sectionName />
     </label>
-    <button (click)="add(sectionName.value); sectionName.value=''">
+    <button (click)="sort($event)">
         add
     </button>
 </div> -->
-<ul class="sections">
+<!-- <ul class="sections">
     <li *ngFor="let section of sections">
         <a routerLink="/detail/{{section.sid}}">
             <span class="badge">{{section.id}}</span> {{section.name}}
         </a>
-        <button class="delete" title="delete section" (click)="delete(section)">x</button>
+        <button class="delete" title="delete section" (click)="sort($event)">x</button>
     </li>
-</ul>
+</ul> -->
+<div *ngIf="isLoading$ | async">Loading data...</div>
+<table *ngIf="!(isLoading$ | async)" id="content-table3" class="table-responsive-full sort-table">
+    <thead>
+        <tr>
+            <th class="id md-remove" (click)="sort($event)">Id
+                <i class="fa fa-fw fa-sort"></i>
+               <!--  <div class="sort-table-arrows">
+                    <a [routerLink]="" (click)="sort($event)"><button class="button"><i
+                        class="fa fa-chevron-up"></i></button></a>
+                    <a [routerLink]="" (click)="sort($event)"><button class="button"><i
+                                class="fa fa-chevron-down"></i></button></a>
+                </div> -->
+            </th>
+            <th class="name" (click)="sort($event)">Name
+                <i class="fa fa-fw fa-sort"></i>
+                <!-- <div class="sort-table-arrows">
+                    <a [routerLink]="" (click)="sort($event)"><button class="button"><i
+                        class="fa fa-chevron-up"></i></button></a>
+                    <a [routerLink]="" (click)="sort($event)"><button class="button"><i
+                                class="fa fa-chevron-down"></i></button></a>
+                </div> -->
+            </th>
+            <th class="professor md-remove" (click)="sort($event)">Professor
+                <i class="fa fa-fw fa-sort"></i>
+                <!-- <div class="sort-table-arrows">
+                    <a [routerLink]="" (click)="sort($event)"><button
+                        class="button"><i class="fa fa-chevron-up"></i></button></a>
+                    <a [routerLink]="" (click)="sort($event)"><button
+                            class="button"><i class="fa fa-chevron-down"></i></button></a>
+                </div> -->
+            </th>
+            <th class="professor_rating" (click)="sort($event)">Professor Rating
+                <i class="fa fa-fw fa-sort"></i>
+                <!-- <div class="sort-table-arrows">
+                    <a [routerLink]="" (click)="sort($event)"><button
+                        class="button"><i class="fa fa-chevron-up"></i></button></a>
+                    <a [routerLink]="" (click)="sort($event)"><button
+                            class="button"><i class="fa fa-chevron-down"></i></button></a>
+                </div> -->
+            </th>
+            <th class="time md-remove" (click)="sort($event)">Time
+                <i class="fa fa-fw fa-sort"></i>
+                <!-- <div class="sort-table-arrows">
+                    <a [routerLink]="" (click)="sort($event)"><button class="button"><i
+                        class="fa fa-chevron-up"></i></button></a>
+                    <a [routerLink]="" (click)="sort($event)"><button class="button"><i
+                                class="fa fa-chevron-down"></i></button></a>
+                </div> -->
+            </th>
+        </tr>
+    </thead>
+    <tr *ngFor="let section of sections">
+        <td data-label="id" class="id">{{ section.id }}</td>
+        <td data-label="name" class="name">{{ section.name }}</td>
+        <td data-label="professor" class="professor">{{ section.professor }}</td>
+        <td data-label="professor rating" class="professor_rating">{{ section.professor_rating }}</td>
+        <td data-label="time" class="time">{{ section.time }}</td>
+    </tr>
+</table>
 
 <!-- <app-section-detail [section]="selectedSection"></app-section-detail> !-->
