removed messages (for now as it's only for debug)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
   <!-- <a routerLink="/sections/Govt 2305">Sections</a> -->
 </nav>
 <router-outlet></router-outlet>
-<app-messages></app-messages>
+<!-- <app-messages></app-messages> -->
