--- a/src/app/sections/sections.component.html
+++ b/src/app/sections/sections.component.html
@@ -1,4 +1,9 @@
-<h2>My Sections</h2>
+<div id="search-component">
+    <h4><label for="search-box">Section Search</label></h4>
+    <label>Search: <input type="text" [formControl]="search_string" (keyup.enter)="search_query()"></label>
+    <p><button (click)="search_query()">Submit</button></p>
+</div>
+<h2>Results for {{ query }}</h2>
 <!-- <div>
     <label>Section name:
         <input #sectionName />
@@ -16,7 +21,8 @@
     </li>
 </ul> -->
 <div *ngIf="isLoading$ | async">Loading data...</div>
-<table *ngIf="!(isLoading$ | async)" id="content-table3" class="table-responsive-full sort-table">
+<div *ngIf="!(isLoading$ | async) && (!sections || sections[0].hasOwnProperty('bad'))">No Results Found.</div>
+<table *ngIf="!(isLoading$ | async) && !sections[0].hasOwnProperty('bad')" id="content-table3" class="table-responsive-full sort-table">
     <thead>
         <tr>
             <th class="id md-remove" (click)="sort($event)">Id
@@ -46,7 +52,16 @@
                             class="button"><i class="fa fa-chevron-down"></i></button></a>
                 </div> -->
             </th>
-            <th class="professor_rating" (click)="sort($event)">Professor Rating
+            <th class="professor_gpa" (click)="sort($event)">GPA
+                <i class="fa fa-fw fa-sort"></i>
+                <!-- <div class="sort-table-arrows">
+                    <a [routerLink]="" (click)="sort($event)"><button
+                        class="button"><i class="fa fa-chevron-up"></i></button></a>
+                    <a [routerLink]="" (click)="sort($event)"><button
+                            class="button"><i class="fa fa-chevron-down"></i></button></a>
+                </div> -->
+            </th>
+            <th class="professor_rating" (click)="sort($event)">Rating
                 <i class="fa fa-fw fa-sort"></i>
                 <!-- <div class="sort-table-arrows">
                     <a [routerLink]="" (click)="sort($event)"><button
@@ -70,6 +85,7 @@
         <td data-label="id" class="id">{{ section.id }}</td>
         <td data-label="name" class="name">{{ section.name }}</td>
         <td data-label="professor" class="professor">{{ section.professor }}</td>
+        <td data-label="professor gpa" class="professor_gpa">{{ section.professor_gpa }}</td>
         <td data-label="professor rating" class="professor_rating">{{ section.professor_rating }}</td>
         <td data-label="time" class="time">{{ section.time }}</td>
     </tr>
