--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<h1>{{title}}</h1>
+<!-- <h1>{{title}}</h1>
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
-  <!-- <a routerLink="/sections/Govt 2305">Sections</a> -->
-</nav>
+  <a routerLink="/sections/Govt 2305">Sections</a> 
+</nav> -->
 <router-outlet></router-outlet>
 <!-- <app-messages></app-messages> -->
