--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,78 +1,80 @@
-/* DashboardComponent's private CSS styles */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-[class*='col-'] {
-    float: left;
-    padding-right: 20px;
-    padding-bottom: 20px;
-}
-
-[class*='col-']:last-of-type {
-    padding-right: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-*, *:after, *:before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
-h3 {
-    text-align: center;
-    margin-bottom: 0;
-}
-
-h4 {
-    position: relative;
-}
-
-.grid {
+#body {
+    width: 100%;
+    height: 100vh;
     margin: 0;
+    padding: 0;
+    /* background: #1abc9c; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
 }
 
-.col-1-4 {
-    width: 25%;
+main {
+    width: auto;
+    height: auto;
 }
 
-.module {
-    padding: 20px;
-    text-align: center;
-    color: #eee;
-    max-height: 120px;
-    min-width: 120px;
-    background-color: #3f525c;
-    border-radius: 2px;
+::selection {
+    background: #16a085;
+    color: #000;
 }
 
-.module:hover {
-    background-color: #eee;
+.line-1 {
+    width: 5px;
+    height: 40px;
+    background: #000;
+    margin: auto;
+    position: relative;
+    left: 45px;
+    top: -20px;
+    transform: rotate(-45deg);
+    transition: .5s;
+    transition-timing-function: cubic-bezier(1,0,.3,1);
     cursor: pointer;
-    color: #607d8b;
 }
 
-.grid-pad {
-    padding: 10px 0;
+.line-2 {
+    width: 5px;
+    height: 0px;
+    background: #000;
+    margin: auto;
+    transform: rotate(-45deg);
+    position: relative;
+    left: 0;
+    top: -40px;
+    opacity: 0;
+    transition: .5s ease-in-out;
+    transition-timing-function: cubic-bezier(1,0,.3,1);
+    cursor: pointer;
 }
 
-.grid-pad>[class*='col-']:last-of-type {
-    padding-right: 20px;
+.search {
+    font-weight: 900;
+    color: #000;
+    font-family: 'Open Sans', sans-serif;
+    width: 100px;
+    height: 100px;
+    border: 5px solid #000;
+    border-radius: 100px;
+    cursor: default;
+    transition: .7s;
+    transition-timing-function:cubic-bezier(1,-0.5,0,1.5);
+    text-align: left;
+    box-sizing: border-box;
+    padding-left: 15px;
+    outline: none;
+    font-size: 32px;
+    background: transparent;
 }
 
-@media (max-width: 600px) {
-    .module {
-        font-size: 10px;
-        max-height: 75px;
-    }
-}
 
-@media (max-width: 1024px) {
-    .grid {
-        margin: 0;
-    }
-    .module {
-        min-width: 60px;
-    }
+.active {
+    width: 500px;
+    height: 100px;
+    border: 5px solid #000;
+    border-radius: 20px;
+    margin-bottom: 20px;
 }
