--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,7 @@
-<!-- <h3>Top Sections</h3> -->
-<div class="grid grid-pad">
-  <a *ngFor="let section of sections" class="col-1-4" routerLink="/detail/{{section.sid}}">
-    <div class="module section">
-      <h4>{{section.name}}</h4>
-    </div>
-  </a>
+<div id="body">
+  <main>
+    <input type="text" class="search" [formControl]="query" (keyup.enter)="search_query()" />
+    <div class="line-1"></div>
+    <div class="line-2"></div>
+  </main>
 </div>
-
-<app-section-search></app-section-search>
