--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -25,7 +25,7 @@ main {
 .line-1 {
     width: 5px;
     height: 40px;
-    background: #000;
+    background-color: #000;
     margin: auto;
     position: relative;
     left: 45px;
@@ -39,7 +39,7 @@ main {
 .line-2 {
     width: 5px;
     height: 0px;
-    background: #000;
+    background-color: #000;
     margin: auto;
     transform: rotate(-45deg);
     position: relative;
@@ -72,7 +72,7 @@ main {
 
 
 .active {
-    width: 500px;
+    width: 80vw;
     height: 100px;
     border: 5px solid #000;
     border-radius: 20px;
