--- a/src/app/section-search/section-search.component.css
+++ b/src/app/section-search/section-search.component.css
@@ -1,15 +1,18 @@
 /* HeroSearch private styles */
-
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 .search-result li {
     border-bottom: 1px solid gray;
     border-left: 1px solid gray;
     border-right: 1px solid gray;
-    width: 195px;
+    width: 79vw;
     height: 16px;
     padding: 5px;
     background-color: white;
     cursor: pointer;
     list-style-type: none;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .search-result li:hover {
@@ -30,12 +33,95 @@
     color: white;
 }
 
-#search-box {
-    width: 200px;
+ul {
+    padding: 0;
+    margin: 0;
+}
+/* #search-box {
+    width: 80vw;
     height: 20px;
 }
 
 ul.search-result {
     margin-top: 0;
     padding-left: 0;
+} */
+
+#body {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    /* background: #1abc9c; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+}
+
+main {
+    width: auto;
+    height: auto;
+}
+
+::selection {
+    background: #16a085;
+    color: #000;
+}
+
+.line-1 {
+    width: 5px;
+    height: 40px;
+    background-color: #000;
+    margin: auto;
+    position: relative;
+    left: 45px;
+    top: -20px;
+    transform: rotate(-45deg);
+    transition: .5s;
+    transition-timing-function: cubic-bezier(1,0,.3,1);
+    cursor: pointer;
+}
+
+.line-2 {
+    width: 5px;
+    height: 0px;
+    background-color: #000;
+    margin: auto;
+    transform: rotate(-45deg);
+    position: relative;
+    left: 0;
+    top: -40px;
+    opacity: 0;
+    transition: .5s ease-in-out;
+    transition-timing-function: cubic-bezier(1,0,.3,1);
+    cursor: pointer;
+}
+
+.search {
+    font-weight: 900;
+    color: #000;
+    font-family: 'Open Sans', sans-serif;
+    width: 100px;
+    height: 100px;
+    border: 5px solid #000;
+    border-radius: 100px;
+    cursor: default;
+    transition: .7s;
+    transition-timing-function:cubic-bezier(1,-0.5,0.4,1.5);
+    text-align: left;
+    box-sizing: border-box;
+    padding-left: 15px;
+    outline: none;
+    font-size: 32px;
+    background: transparent;
+}
+
+
+.active {
+    width: 80vw;
+    height: 100px;
+    border: 5px solid #000;
+    border-radius: 20px;
+    /* margin-bottom: 20px; */
 }
