--- a/src/app/section-search/section-search.component.css
+++ b/src/app/section-search/section-search.component.css
@@ -1,10 +1,10 @@
 /* HeroSearch private styles */
+
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 .search-result li {
     border-bottom: 1px solid gray;
     border-left: 1px solid gray;
     border-right: 1px solid gray;
-    width: 79vw;
     height: 16px;
     padding: 5px;
     background-color: white;
@@ -33,10 +33,18 @@
     color: white;
 }
 
+a {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 ul {
+    max-width: 80vw;
     padding: 0;
     margin: 0;
 }
+
 /* #search-box {
     width: 80vw;
     height: 20px;
@@ -79,7 +87,7 @@ main {
     top: -20px;
     transform: rotate(-45deg);
     transition: .5s;
-    transition-timing-function: cubic-bezier(1,0,.3,1);
+    transition-timing-function: cubic-bezier(1, 0, .3, 1);
     cursor: pointer;
 }
 
@@ -94,7 +102,7 @@ main {
     top: -40px;
     opacity: 0;
     transition: .5s ease-in-out;
-    transition-timing-function: cubic-bezier(1,0,.3,1);
+    transition-timing-function: cubic-bezier(1, 0, .3, 1);
     cursor: pointer;
 }
 
@@ -108,7 +116,7 @@ main {
     border-radius: 100px;
     cursor: default;
     transition: .7s;
-    transition-timing-function:cubic-bezier(1,-0.5,0.4,1.5);
+    transition-timing-function: cubic-bezier(1, -0.5, 0.4, 1.5);
     text-align: left;
     box-sizing: border-box;
     padding-left: 15px;
@@ -116,7 +124,6 @@ main {
     font-size: 32px;
     background: transparent;
 }
-
 
 .active {
     width: 80vw;
