--- a/src/app/section-search/section-search.component.html
+++ b/src/app/section-search/section-search.component.html
@@ -31,7 +31,7 @@
       <input (click)="opened=true" #searchBox type="text" class="search" id="search-box" [formControl]="query" (keyup.enter)="search_query()" (input)="search(searchBox.value)" />
       <ul [hidden]="!opened" [@panelInOut] class="search-result">
         <li *ngFor="let section of sections$ | async" >
-          <a href="sections/{{section.name}}">{{section.name}} | {{section.sid}}</a>
+          <a href="sections/{{section.name}}">{{section.name}}&#9;{{section.sid}}</a>
         </li>
       </ul>
       <div class="line-1" (click)="opened=false"></div>
