--- a/src/app/sections/sections.component.html
+++ b/src/app/sections/sections.component.html
@@ -20,7 +20,9 @@
         <button class="delete" title="delete section" (click)="sort($event)">x</button>
     </li>
 </ul> -->
-<div *ngIf="isLoading$ | async">Loading data...</div>
+<div *ngIf="isLoading$ | async">
+    <div class="loader"></div>
+</div>
 <div *ngIf="!(isLoading$ | async) && (!sections || sections[0].hasOwnProperty('bad'))">No Results Found.</div>
 <table *ngIf="!(isLoading$ | async) && !sections[0].hasOwnProperty('bad')" id="content-table3" class="table-responsive-full sort-table">
     <thead>
