--- a/src/styles.css
+++ b/src/styles.css
@@ -14,9 +14,9 @@ h1 {
   }
   body, input[type="text"], button {
     color: #333;
-    font-family: Cambria, Georgia;
+    font-family: 'Open Sans', sans-serif;
   }
   /* everywhere else */
   * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
   }
