--- a/src/app/section-search/section-search.component.html
+++ b/src/app/section-search/section-search.component.html
@@ -28,10 +28,10 @@
  -->
   <div id="body">
     <main>
-      <input (click)="opened=true" #searchBox type="text" class="search" id="search-box" [formControl]="query" (keyup.enter)="search_query()" (input)="search(searchBox.value)" />
+      <input placeholder="search" (click)="opened=true" #searchBox type="text" class="search" id="search-box" [formControl]="query" (keyup.enter)="search_query()" (input)="search(searchBox.value)" />
       <ul [hidden]="!opened" [@panelInOut] class="search-result">
         <li *ngFor="let section of sections$ | async" >
-          <a href="sections/{{section.name}}">{{section.name}}&#9;{{section.sid}}</a>
+          <a href="sections/{{section.name}}" (click)="submitMe(section.name)">{{section.name}}&#9;{{section.sid}}</a>
         </li>
       </ul>
       <div class="line-1" (click)="opened=false"></div>
