--- a/src/app/sections/sections.component.html
+++ b/src/app/sections/sections.component.html
@@ -1,12 +1,20 @@
 <main>
 
 
-    <div id="search-component">
+    <!-- <div id="search-component">
         <h4><label for="search-box">Section Search</label></h4>
         <label>Search: <input type="text" [formControl]="search_string" (keyup.enter)="search_query()"></label>
-        <p><button (click)="search_query()">Submit</button></p>
-    </div>
-    <h2>Results for {{ query }}</h2>
+        <button id="submit" (click)="search_query()">Submit</button>
+    </div> -->
+    <div class="wrap">
+        <div class="search">
+           <input type="text" [formControl]="search_string" (keyup.enter)="search_query()" class="searchTerm" placeholder="What are you looking for?">
+           <button type="submit" (click)="search_query()" class="searchButton">
+             <i class="fa fa-search"></i>
+          </button>
+        </div>
+     </div>
+    <h2 style="text-align: center;">Results for {{ query }}</h2>
     <!-- <div>
     <label>Section name:
         <input #sectionName />
@@ -23,7 +31,7 @@
         <button class="delete" title="delete section" (click)="sort($event)">x</button>
     </li>
 </ul> -->
-    <div *ngIf="isLoading$ | async">
+    <div class="outer" *ngIf="isLoading$ | async">
         <div class="loader"></div>
     </div>
     <div *ngIf="!(isLoading$ | async) && (!sections || sections[0].hasOwnProperty('bad'))">No Results Found.</div>
