added cool images and reworked smart list

--- a/src/app/sections/sections.component.html
+++ b/src/app/sections/sections.component.html
@@ -43,7 +43,7 @@
                 <th class="id md-remove" (click)="sort($event)">Id
                     <i class="fa fa-fw fa-sort"></i>
                 </th>
-                <th class="name" (click)="sort($event)">Name
+                <th class="name md-remove" (click)="sort($event)">Name
                     <i class="fa fa-fw fa-sort"></i>
                 </th>
                 <th class="status" (click)="sort($event)">Status
