--- a/src/app/section-search/section-search.component.css
+++ b/src/app/section-search/section-search.component.css
@@ -1,13 +1,21 @@
 /* HeroSearch private styles */
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+li:nth-child(10) {
+    border-bottom: 5px solid white;
+}
+
+li:nth-child(-n+9){
+    border-bottom: 1px solid white;
+}
+
 .search-result li {
-    border-bottom: 1px solid gray;
-    border-left: 1px solid gray;
-    border-right: 1px solid gray;
+    border-left: 5px solid white;
+    border-right: 5px solid white;
     height: 16px;
     padding: 5px;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.7);
     cursor: pointer;
     list-style-type: none;
     text-overflow: ellipsis;
@@ -15,12 +23,22 @@
     white-space: nowrap;
 }
 
+
+
+input {
+    color: white;
+}
+
+input::placeholder {
+    color: white;
+}
+
 .search-result li:hover {
     background-color: #607D8B;
 }
 
 .search-result li a {
-    color: #888;
+    color: #CCC;
     display: block;
     text-decoration: none;
 }
@@ -60,11 +78,13 @@ ul.search-result {
     height: 100vh;
     margin: 0;
     padding: 0;
-    /* background: #1abc9c; */
     display: flex;
     justify-content: center;
     align-items: center;
     user-select: none;
+    position: absolute;
+    z-index: 2;
+    box-shadow: inset 0 0 0 150vw rgba(0, 0, 0, 0.5);
 }
 
 main {
@@ -74,13 +94,13 @@ main {
 
 ::selection {
     background: #16a085;
-    color: #000;
+    color: white;
 }
 
 .line-1 {
     width: 5px;
     height: 40px;
-    background-color: #000;
+    background-color: white;
     margin: auto;
     position: relative;
     left: 45px;
@@ -94,7 +114,7 @@ main {
 .line-2 {
     width: 5px;
     height: 0px;
-    background-color: #000;
+    background-color: white;
     margin: auto;
     transform: rotate(-45deg);
     position: relative;
@@ -108,11 +128,11 @@ main {
 
 .search {
     font-weight: 800;
-    color: #000;
+    color: white;
     font-family: 'Open Sans', sans-serif;
     width: 100px;
     height: 100px;
-    border: 5px solid #000;
+    border: 5px solid white;
     border-radius: 100px;
     cursor: default;
     transition: .7s;
@@ -128,7 +148,7 @@ main {
 .active {
     width: 80vw;
     height: 100px;
-    border: 5px solid #000;
-    border-radius: 20px;
+    border: 5px solid white;
+    border-radius: 0px; /* was 0 px originally */
     /* margin-bottom: 20px; */
 }
