fixed no result found message and errors

--- a/src/app/sections/sections.component.css
+++ b/src/app/sections/sections.component.css
@@ -328,6 +328,9 @@ caption {
 .outer {
 	text-align: center;
 }
+.noresult {
+	text-align: center;
+}
 .loader {
 	display: inline-block;
 	text-align: center;
